# OppNDA

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  PERFORMANCE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.bat  setup.sh  start.bat  start.sh
GUI/: config.js  settings.html
app/: __init__.py  api.py
config/: analysis_config.json  regression_config.json
core/: __init__.py  averager.py
docs/: quickstart.rst
docs/_build/latex/: OppNDA_tutorial.aux  OppNDA_tutorial.tex  OppNDA_tutorial.toc
docs/user_guide/: configuration.rst  gui.rst
examples/: README.md
outputs/: EpidemicRouter_metrics.csv  FirstContactRouter_metrics.csv  SprayAndWaitRouter_metrics.csv
scripts/: setup.bat  setup.sh  start.bat  start.sh
tests/: README.md  test_configs.py  test_framework.py
